themes/si8/less/custom/header.less
.header-top {
  background: @brand-gray;
  color: #fff;
  font-family: @font-footer;



  a {
    color: #fff;
  }

  .logo {
    width: 25px;
    margin-right: 10px;
  }

  .header-top2 {
    position: absolute;
    top: 0;
    right: 0;
  }

  .header-top1 {
    padding: 10px 0;
    font-weight: bold;
  }

  .block-lang-dropdown {
    display: inline-block;
  }

  .accedi {
    border-radius: 0;
    background-color: @brand-secondary;
    display: inline-block;
    padding: 14px 60px;
    color: #fff;
    text-transform: uppercase;
    font-weight: bold;


    &:hover {
      //color: #fff;
      text-decoration: underline;
    }
  }


  .selettorelingua {
    background-color: @brand-third;
    float: left;

    ul {
      margin-bottom: 0;
      padding: 14px;

      li {
        display: inline-block;
        text-transform: uppercase;
        list-style-type: none;
        //border-right: 1px solid #fff;


        &::after {
          content: ' |';
        }

        &:last-child::after{
          content: '';
        }

        a {
          padding: 0 7px;

          &.is-active {
            font-weight: bold;
            text-decoration: underline;
          }
        }
      }

    }
  }
}

#hamburger-toggle {
  font-size: 3.5rem;
  position: absolute;
  left: 50px;
  top: 50%;
  transform: translateY(-50%);
}

.header-main {
  background: @brand-primary;
  color: #fff;
  padding: 0;
  position: relative;

  a {
    color: #fff;
  }

  .icon-social {
    text-align: right;
    margin-top: 5px;

    a {
      font-size: 3rem;
      display: inline-block;
      margin-left: 15px;
    }
  }

  .site-title {
    color: #fff;
    font-family: @font-footer;
    font-size: 3.7rem;
    padding: 36px 0;

    .subtitle {
      font-size: 1.8rem;
      display: block;
    }
  }

  .ricerca {
    margin-top: 5px;

    label {
      display: none;
    }

    input.form-text {
      border: none;
      border-radius: 0;
      font-size: 1.5rem;
      height: 50px;
    }

    button {
      color: #fff;
      background-color: #333;
      border: none;
      border-radius: 0;
      margin-right: 0;
      height: 50px;
      width: 50px;
      margin-left: -4px;
      font-size: 2.5rem;
    }
  }

}

.header-down {
  background-color: @brand-secondary;
  text-align: center;

  .navbar-nav {
    display: inline-block;
    float: none;
    padding: 2px;

    a {
      color: #fff;
      font-family: @font-footer;
      font-size: 2rem;

      &:hover {
        background-color: transparent;
        text-decoration: underline;
      }
    }
  }
}

